<resources>
    <string name="app_name">KotlinBasicNoteApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginErrorText">The email and password you entered did notmatch our records. Please try again.</string>
    <string name="forget_password_confirm_text">Confirm your email and we’llsend the instructions.</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_page_login_text">Login or sign up to continue using our app.</string>
    <string name="password">Password</string>
    <string name="password_is_required">Password is required</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="edit_note">Edit Note</string>
    <string name="write_title">Write Title</string>
    <string name="write_your_note">Write your note.</string>
    <string name="save_note">Save Note</string>
    <string name="search">Search...</string>
    <string name="cancel">Cancel</string>
    <string name="add_note">Add Note</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="email_is_required">Email is required</string>
    <string name="fullname_is_required">Full Name is required</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="change_password_text">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Retype New Password</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_invalid">Password invalid</string>
</resources>
