<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ProfilePageFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/menuView"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:layout_marginVertical="@dimen/margin_12dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title2"
        android:textColor="@color/text_primary"
        android:text="@string/profile"
        android:layout_marginVertical="@dimen/margin_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/topGuideLine"
        app:layout_constraintGuide_percent="0.1"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameETLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topGuideLine"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/text_secondary"
        android:paddingVertical="@dimen/margin_12dp"
        >

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/full_name"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            style="@style/Title4"
            android:textColor="@color/text_primary"
            android:background="@android:color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/nameErrorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fullNameETLayout"
        app:layout_constraintStart_toStartOf="@id/fullNameETLayout"
        >
        <View

            android:layout_margin="@dimen/margin_8dp"
            android:layout_width="@dimen/margin_16dp"
            android:layout_height="@dimen/margin_16dp"
            android:background="@drawable/ic_err"
            />
        <TextView
            android:id="@+id/nameErrorText"
            android:layout_marginVertical="@dimen/margin_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title5"
            android:textColor="@color/helper_red"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailETLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameErrorLayout"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/text_secondary"
        android:paddingVertical="@dimen/margin_12dp"
        >

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:textColor="@color/text_primary"
            android:background="@android:color/transparent"
            style="@style/Title4"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/emailErrorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailETLayout"
        app:layout_constraintStart_toStartOf="@id/emailETLayout"
        >
        <View

            android:layout_margin="@dimen/margin_8dp"
            android:layout_width="@dimen/margin_16dp"
            android:layout_height="@dimen/margin_16dp"
            android:background="@drawable/ic_err"
            />
        <TextView
            android:id="@+id/emailErrorText"
            android:layout_marginVertical="@dimen/margin_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title5"
            android:textColor="@color/helper_red"
            />
    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        style="@style/Title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/button_tint"
        android:fontFamily="@font/inter_semi"
        android:foreground="@android:color/transparent"
        android:paddingVertical="@dimen/margin_24dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/btn_text_tint"
        app:cornerRadius="@dimen/borderRadious_5dp"
        app:layout_constraintEnd_toEndOf="@+id/fullNameETLayout"
        app:layout_constraintStart_toStartOf="@+id/fullNameETLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailErrorLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changePasswordText"
        style="@style/Title4"
        android:text="@string/change_password_text"
        android:textColor="@color/action_primary_100"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
        app:layout_constraintStart_toStartOf="@+id/saveBtn"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signOutText"
        style="@style/Title4"
        android:text="@string/sign_out"
        android:textColor="@color/helper_red"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
        app:layout_constraintStart_toStartOf="@+id/saveBtn"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordText" />
</androidx.constraintlayout.widget.ConstraintLayout>
